--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "devDependencies": {
     "@types/node": "^25.0.6",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "inquirer": "^8.2.7",
     "vitepress": "^2.0.0-alpha.15"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "add-nav": "node scripts/add-nav.js"
   }
 }
