--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "inquirer": "^8.2.7",
+    "markdown-it-container": "^3.0.0",
     "vitepress": "^2.0.0-alpha.15"
   },
   "scripts": {
