--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
     "add-nav": "node scripts/add-nav.js"
+  },
+  "dependencies": {
+    "lucide-vue-next": "^0.562.0"
   }
 }
