--- a/.github/workflows/deploy-to-oss.yml
+++ b/.github/workflows/deploy-to-oss.yml
@@ -62,6 +62,16 @@ jobs:
           # 而不是：https://endpoint/bucket-name/path
           aws configure set default.s3.addressing_style virtual
           
+          # 禁用分块编码（OSS 不支持 aws-chunked encoding）
+          # 设置一个很大的 multipart_threshold 值来禁用分块上传
+          # 这样所有文件都会使用普通上传而不是分块上传
+          aws configure set default.s3.multipart_threshold 10GB
+          aws configure set default.s3.multipart_chunksize 10GB
+          
+          # 禁用 payload signing（解决分块编码问题）
+          # OSS 不支持 aws-chunked encoding，需要禁用 payload signing
+          aws configure set default.s3.payload_signing_enabled false
+          
           # 上传文件到 S3 兼容的 OSS
           # --endpoint-url 使用基础端点（不包含 bucket 名称）
           # addressing_style=virtual 会强制使用虚拟主机样式
