fix: update OSS deployment workflow to conditionally install ossutil or AWS CLI based on endpoint, enhancing compatibility with Aliyun OSS

--- a/.github/workflows/deploy-to-oss.yml
+++ b/.github/workflows/deploy-to-oss.yml
@@ -34,13 +34,25 @@ jobs:
       - name: Build project
         run: npm run docs:build
 
-      - name: Install AWS CLI
+      - name: Install tools
         run: |
-          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-          unzip -q awscliv2.zip
-          sudo ./aws/install --update
+          # 检测是否是阿里云 OSS
+          OSS_ENDPOINT="${{ secrets.OSS_ENDPOINT }}"
+          if [[ "$OSS_ENDPOINT" =~ aliyuncs\.com ]]; then
+            echo "检测到阿里云 OSS，安装 ossutil"
+            # 安装 ossutil
+            wget -q https://gosspublic.alicdn.com/ossutil/1.7.14/ossutil64 -O ossutil
+            chmod +x ossutil
+            sudo mv ossutil /usr/local/bin/
+          else
+            echo "检测到非阿里云 OSS，安装 AWS CLI"
+            # 安装 AWS CLI
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -q awscliv2.zip
+            sudo ./aws/install --update
+          fi
 
-      - name: Upload to S3-compatible OSS
+      - name: Upload to OSS
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.OSS_SECRET_ACCESS_KEY }}
@@ -51,33 +63,45 @@ jobs:
           OSS_PATH="${{ secrets.OSS_PATH || '' }}"
           OSS_ENDPOINT="${{ secrets.OSS_ENDPOINT }}"
           
-          if [ -n "$OSS_PATH" ]; then
-            S3_PATH="s3://${OSS_BUCKET}/${OSS_PATH}"
+          # 判断是否是阿里云 OSS
+          if [[ "$OSS_ENDPOINT" =~ aliyuncs\.com ]]; then
+            echo "使用 ossutil 上传到阿里云 OSS"
+            
+            # 构建 ossutil 上传路径
+            if [ -n "$OSS_PATH" ]; then
+              OSS_TARGET="oss://${OSS_BUCKET}/${OSS_PATH}"
+            else
+              OSS_TARGET="oss://${OSS_BUCKET}"
+            fi
+            
+            # 使用 ossutil sync 同步文件（类似 aws s3 sync）
+            # sync 命令会自动递归，支持 --update 和 --delete
+            # --update 只上传更新的文件
+            # --delete 删除目标中不存在的文件（确保目标与源完全一致）
+            # -e 指定 endpoint
+            # -i 指定 AccessKey ID
+            # -k 指定 AccessKey Secret
+            ossutil sync .vitepress/dist/ ${OSS_TARGET} \
+              --update \
+              --delete \
+              -e ${OSS_ENDPOINT} \
+              -i "${{ secrets.OSS_ACCESS_KEY_ID }}" \
+              -k "${{ secrets.OSS_SECRET_ACCESS_KEY }}"
           else
-            S3_PATH="s3://${OSS_BUCKET}"
+            echo "使用 AWS CLI 上传到 S3 兼容的 OSS"
+            
+            # 构建 AWS S3 上传路径
+            if [ -n "$OSS_PATH" ]; then
+              S3_PATH="s3://${OSS_BUCKET}/${OSS_PATH}"
+            else
+              S3_PATH="s3://${OSS_BUCKET}"
+            fi
+            
+            # 上传文件到 S3 兼容的 OSS
+            # --endpoint-url 使用基础端点（不包含 bucket 名称）
+            # --delete 参数会删除目标中不存在的文件
+            aws s3 sync .vitepress/dist/ ${S3_PATH} \
+              --endpoint-url ${OSS_ENDPOINT} \
+              --delete \
+              --region ${AWS_DEFAULT_REGION}
           fi
-          
-          # 配置 AWS CLI 使用虚拟主机样式（OSS 要求）
-          # 这会将请求转换为：https://bucket-name.endpoint/path
-          # 而不是：https://endpoint/bucket-name/path
-          aws configure set default.s3.addressing_style virtual
-          
-          # 禁用分块编码（OSS 不支持 aws-chunked encoding）
-          # 设置一个很大的 multipart_threshold 值来禁用分块上传
-          # 这样所有文件都会使用普通上传而不是分块上传
-          aws configure set default.s3.multipart_threshold 100GB
-          aws configure set default.s3.multipart_chunksize 100GB
-          
-          # 禁用 payload signing 和校验和计算（解决分块编码问题）
-          # OSS 不支持 aws-chunked encoding，需要禁用这些功能
-          aws configure set default.s3.payload_signing_enabled false
-          aws configure set default.s3.request_checksum_calculation when_required
-          
-          # 上传文件到 S3 兼容的 OSS
-          # --endpoint-url 使用基础端点（不包含 bucket 名称）
-          # addressing_style=virtual 会强制使用虚拟主机样式
-          # --delete 参数会删除目标中不存在的文件
-          aws s3 sync .vitepress/dist/ ${S3_PATH} \
-            --endpoint-url ${OSS_ENDPOINT} \
-            --delete \
-            --region ${AWS_DEFAULT_REGION}
