--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -1,6 +1,6 @@
-# 构建 VitePress 站点并将其部署到 GitHub Pages 的示例工作流程
+# 构建 Vue 3 站点并将其部署到 GitHub Pages
 #
-name: Deploy VitePress site to Pages
+name: Deploy to GitHub Pages
 
 on:
   # 在针对 `main` 分支的推送上运行。如果你
@@ -30,8 +30,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-        with:
-          fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
       - name: Setup Node
         uses: actions/setup-node@v6
         with:
@@ -41,14 +39,12 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Install dependencies
         run: npm ci
-      - name: Build with VitePress
-        run: npm run docs:build
-        env:
-          VITEPRESS_BASE: /${{ github.event.repository.name }}/
+      - name: Build
+        run: npm run build -- --base=/${{ github.event.repository.name }}/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .vitepress/dist
+          path: dist
 
   # 部署工作
   deploy:
