--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "devDependencies": {
-    "@types/markdown-it-container": "^2.0.11",
-    "@types/node": "^25.0.8",
-    "axios": "^1.13.2",
-    "cheerio": "^1.1.2",
-    "inquirer": "^8.2.7",
-    "markdown-it-container": "^3.0.0",
-    "vitepress": "^2.0.0-alpha.15"
-  },
+  "name": "newbie-home",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview",
+    "dev": "vite",
+    "build": "vite-ssg build",
+    "preview": "vite preview",
     "add-nav": "node scripts/add-nav.js"
   },
   "dependencies": {
-    "lucide-vue-next": "^0.562.0"
+    "axios": "^1.13.2",
+    "lucide-vue-next": "^0.562.0",
+    "vue": "^3.4.0",
+    "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-container": "^2.0.11",
+    "@types/node": "^25.0.9",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "cheerio": "^1.1.2",
+    "gray-matter": "^4.0.3",
+    "inquirer": "^8.2.7",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
+    "typescript": "^5.9.3",
+    "vite": "^5.4.21",
+    "vite-ssg": "^0.23.8",
+    "vue-tsc": "^2.2.12"
   }
 }
