--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fontsource/noto-sans-sc": "^5.2.9",
     "@fontsource/outfit": "^5.2.8",
     "axios": "^1.13.2",
+    "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.562.0",
     "vue": "^3.4.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/highlight.js": "^9.12.4",
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-container": "^2.0.11",
     "@types/node": "^25.0.9",
