feat: add custom build scripts for GitHub Pages and dynamic base path handling in Vite config, implement asset path correction for post-build processing, and include new images in posts for enhanced content presentation

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite-ssg build && node scripts/restructure-html.js",
+    "build:github": "vite-ssg build --base=/newbie-space/ && node scripts/restructure-html.js && BASE_URL=/newbie-space/ node scripts/fix-asset-paths.js",
+    "build:custom": "vite-ssg build --base=/ && node scripts/restructure-html.js",
     "preview": "vite preview",
     "add-nav": "node scripts/add-nav.js"
   },
