--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite-ssg build && node scripts/restructure-html.js && node scripts/fix-asset-paths.js",
+    "build": "vite-ssg build && node scripts/restructure-html.js && node scripts/fix-asset-paths.js && node scripts/create-404.js",
     "preview": "vite preview",
     "add-nav": "node scripts/add-nav.js"
   },
